[package]
name = "nrf-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.3", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf9160-s",
    "time-driver-rtc1",
    "gpiote",
    # "unstable-pac",
    "time",
] }
# embassy-net-nrf91 = { version = "0.0.0", features = ["defmt"] }
embassy-net = { version = "0.5.0", features = [
    "defmt",
    "tcp",
    "proto-ipv4",
    "medium-ip",
] }

defmt = "0.3"
defmt-rtt = "0.4"

heapless = "0.8"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2" }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[profile.release]
debug = 2

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "02ba6cd6c81ac1174287bbad1efd4fd68ad13aa3" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "02ba6cd6c81ac1174287bbad1efd4fd68ad13aa3" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "02ba6cd6c81ac1174287bbad1efd4fd68ad13aa3" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "02ba6cd6c81ac1174287bbad1efd4fd68ad13aa3" }
